--- a/player/build.gradle
+++ b/player/build.gradle
@@ -29,8 +29,8 @@ android {
 }
 
 dependencies {
-    implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'com.google.android.material:material:1.1.0'
+//    implementation 'androidx.appcompat:appcompat:1.1.0'
+//    implementation 'com.google.android.material:material:1.1.0'
 
     //https://github.com/google/ExoPlayer
     implementation 'com.google.android.exoplayer:exoplayer:2.18.1'
